# diff-comp

./: .gitmodules  README.md
code/: README.md
code/dida-rust/: .gitignore  Cargo.toml  as.graphml  chameleon.graphml  chameleon.txt  communication.ron  crocodile.txt  data.graphml  data.txt  email.graphml  smol.txt  squirrel.txt
code/dida-rust/.cargo/: config
code/dida-rust/src/: lib.rs  main.rs
code/dida-rust/src/cli/: cli.rs
code/dida-rust/src/shared/: config.rs  graph_data.rs  mod.rs
code/dida-rust/src/utils/: graphtrans.rs  kafka.rs  mod.rs  ordered_float.rs  petgraph.rs
code/infra/: Dockerfile  convert_yaml.py  docker-compose.yaml  kafka.deployment.dhall  kafka.deployment.yaml  kafka.env.dhall  kafka.service.dhall  kafka.service.yaml  zookeeper.deployment.dhall  zookeeper.deployment.yaml  zookeeper.env.dhall  zookeeper.service.dhall  zookeeper.service.yaml
code/spark/: build.sbt
code/spark/src/main/scala/org/isub/thesis/app/: App.scala
code/src/shared/: config.rs
extra-docs/: inital-proposal.txt
extra-docs/crocodile/: report.html
