[package]
name = "diff-streams"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.12.0"
differential-dataflow = "0.12.0"
serde = { version="1.0.126", features=["derive"] }
clap = "3.0.0-beta.2"
crossbeam = "0.8.1"
nom = "6.2.1"