[package]
name = "diff-streams"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.12.0"
differential-dataflow = "0.12.0"
serde = { version="1.0.126", features=["derive"] }
clap = "3.0.0-beta.2"
crossbeam = "0.8.1"
ron = "0.6.4"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
rdkafka = { version = "0.25", features=["cmake-build"] }
tokio = { version ="1.11.0", features=["full"] }
futures = "0.3.17"

[lib]
name="difflouvain_utils"
path="src/lib.rs"
test=true
doctest=true
bench=true

